<resources>
    <string name="app_name">Address Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Address Book</string>
    <string name="nav_header_subtitle">Mikail Kocak | Clément Koenig</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_contacts">Contacts</string>
    <string name="menu_groups">Groups</string>
    <string name="card_delete_btn">Delete</string>
    <string name="save_entry">Save</string>
    <string name="entry_firstname">First name</string>
    <string name="entry_lastname">Last name</string>
    <string name="please_fill_form">Please fill the form.</string>
    <string name="not_saved">Entry not saved.</string>
    <string name="contact_saved">The contact has been saved!</string>
    <string name="contact_created">The contact has been created!</string>
    <string name="failed_to_create">Failed to create a new entry.</string>
    <string name="contact_updated">The contact as been saved!</string>
    <string name="entry_saved">The entry as been saved!</string>
    <string name="entry_title">Title</string>
    <string name="group_created">The group has been created!</string>
    <string name="group_updated">The group has been updated!</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="failed_to_update">Failed to update the entry.</string>
    <string name="change_picture">Change Picture</string>
    <string name="selected_picture">Selected Picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="contact_picture">The contact\'s picture</string>
    <string name="contacts_in_group">Contacts</string>
    <string name="select_contacts">Add Contacts</string>
    <string name="select_contact">Select Contact</string>
    <string name="already_in_group">The contact is already in this group.</string>
    <string name="select_group">Manage Groups</string>
    <string name="remove_button">The remove button</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="create_new_address">New Address</string>
    <string name="add_postal_address_btn">Add Postal Address</string>
    <string name="postal_address">Postal Address</string>
    <string name="failed_to_add_postals">Failed to save postals.</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_phone_btn">Add Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="add_mail_btn">Add Mail Address</string>
    <string name="duplicate_entry">Cannot create duplicates.</string>
    <string name="duplicate_group">This group was a duplicate.</string>
    <string name="select_group_title">Select Group</string>
    <string name="new_postal_address">New Postal Address</string>
    <string name="new_phone_address">New Phone Number</string>
    <string name="new_mail_address">New Email Address</string>
    <string name="add_btn">ADD</string>
    <string name="mails">Email Addresses</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="postal_addresses">Postal Addresses</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="no_entries">No entries.</string>
    <string name="no_entries_add_one">No entries. Start by adding one!</string>

    <string-array name="address_type">
        <item>work</item>
        <item>home</item>
    </string-array>
</resources>
